fixed layout bugs

--- a/styles.css
+++ b/styles.css
@@ -116,18 +116,9 @@ body {
 
 }
 
-.card-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-body{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+
+
 
 /*------------css de la tarjeta principal-------------*/
 .mat-card {
